# pythonProject_coursework

./: .coverage  README.md  functions.py  main.py  pyproject.toml  sample_operations.json
test/: test_functions.py  test_main.py  test_operations.json
utils/: __init__.py  main.py
