[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Anastasiya Samokhina <anastasiya0625@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
